Add get templates endpoint. Fix total calories mapping bug